--- a/compare/compare-outcomes/index.html
+++ b/compare/compare-outcomes/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>LO Suggestion Test Client</title>
+    <title>Learning Outcome Suggestion Test Client</title>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
